correction width filter on mobile correction erreur validateur id

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -465,6 +465,7 @@ i.fa-info {
     }
     .filter-bar>div {
         gap: 14px;
+        width: 100%;
     }
     .filter {
         width: 160px;
